@@ -2,13 +2,14 @@ module Mephisto
   module Liquid
     class CommentDrop < ::Liquid::Drop
       include DropMethods
+      include ActionView::Helpers::TextHelper
       
       def comment() @source end
 
       def initialize(source)
         @source         = source
         @comment_liquid = %w(id author author_email author_ip created_at).inject({}) { |l, a| l.update(a => comment.send(a)) }
-        @comment_liquid.update 'is_approved' => comment.approved?, 'body' => comment.body_html
+        @comment_liquid.update 'is_approved' => comment.approved?, 'body' => sanitize(comment.body_html)
       end
 
       def before_method(method)
