@@ -1,5 +1,7 @@
 * SVN *
 
+* sanitize posted comments
+
 * Fix bug where atom feed content from textile was double encoded
 
 * sanitize atom feed content
